--- a/styleYikai.css
+++ b/styleYikai.css
@@ -14,6 +14,15 @@ html {
   font-size: 50px;
 }
 
+#bigTitle {
+  padding-top: 50px;
+}
+
+#shyText {
+  font-size: 30px;
+  padding-bottom: 50px;
+}
+
 
 body {
   background-color: #FFF8D9;
@@ -38,7 +47,7 @@ body {
 
 .bioMargin {
   margin-top: 250px;
-  margin-bottom: 200px;
+  margin-bottom: 400px;
   font-size: 30px;
   background-color: #FFF8D9;
 }
