--- a/meStyle.css
+++ b/meStyle.css
@@ -32,6 +32,7 @@ a:hover {
 #sideBar {
 	height: auto;
 	width: auto;
+	padding-right: 5%;
 
 }
 
@@ -113,7 +114,7 @@ transform: translate(3%, 30%);
 
 #c {
 	height: auto;
-
+	width: auto;
 	/*transform: translate(0%, 5%); */
 }
 
@@ -121,6 +122,7 @@ transform: translate(3%, 30%);
 	height: auto;
 	height: auto;
 
+	padding-left: 0px;
 }
 
 #contentWrapper {
