--- a/workCss.css
+++ b/workCss.css
@@ -38,19 +38,43 @@ a:hover {
     }
 
     #choiceId {
-        height: 40%;
+        height: auto;
+    }
+
+    #p5 {
+        height: 12rem;
+    }
+
+    #animations {
+        height: 12rem;
     }
 }
 
 @media screen and (min-width: 1200px) {
     #choiceId {
-        height: 40%;
+        height: auto;
+    }
+
+    #p5 {
+        height: 13rem;
+    }
+
+    #animations {
+        height: 13rem;
     }
 }
 
 @media screen and (max-width: 768px) {
     #choiceId {
-        height: 50%;
+        height: auto;
+    }
+
+    #p5 {
+        height: 10rem;
+    }
+
+     #animations {
+        height: 10rem;
     }
 }
 
@@ -92,7 +116,6 @@ a:hover {
     background-position: center center;
     background-size: 100%;
     cursor: pointer;
-    height: auto;
     margin: 3% 3% 3% 3%;
     opacity: 100%;
     transition: opacity 100ms;
