--- a/workCss.css
+++ b/workCss.css
@@ -75,6 +75,7 @@ a:hover {
 @media screen and (max-width: 768px) {
     #choiceId {
         height: auto;
+        padding-bottom: 10%;
     }
 
     #p5 {
@@ -142,7 +143,7 @@ a:hover {
 #figures {
     background-color: white;
     background-image: url("/figure-Resources/profile3Small.jpg");
-    background-position: center center;
+    background-position: center top;
     background-size: 100%;
     cursor: pointer;
     margin: 3% 3% 3% 3%;
