--- a/p5Style.css
+++ b/p5Style.css
@@ -9,6 +9,11 @@ body {
     width: 100%;
     padding-top: 0.5rem;
     background-color: white;
+    text-align: left;
+}
+
+.subhead {
+    color: "grey";
 }
 
 @media screen and (min-width: 768px) {
@@ -36,23 +41,24 @@ body {
     #waveCanvas {
         transform: translate3d(0, 0, 0);
         -webkit-transform: translate3d(0, 0, 0);
-        padding-left: 2rem;
+        
     }
 
     #descrpWave {
         padding-top: 2%;
         padding-bottom: 2%;
-        padding-left: 2rem;
+        
     }
 
     #descrpFace {
         padding-top: 2%;
         padding-bottom: 5%;
-        padding-left: 2rem;
+        
     }
 
     #title, #polyTitle {
         padding-top: 3rem;
+        text-align: center;
     }
 
     #moreWaves {
@@ -88,6 +94,7 @@ body {
 
     #title, #polyTitle {
         padding-top: 0rem;
+        text-align: center;
     }
 
     #moreWaves {
@@ -138,6 +145,7 @@ h1,h2,h3 {
 #endRow {
     padding-bottom: 9%;
     padding-left: 1rem;
+    text-align: center;
 }
 
 #footer {
