--- a/workCss.css
+++ b/workCss.css
@@ -1,175 +1,188 @@
 html {
-    font-size: 16px;
-    height: 100%;
-    width: 100%;
+  font-size: 16px;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    height: 100%;
-    width: 100%;
-    padding-top: 0.5rem;
+  height: 100%;
+  width: 100%;
+  padding-top: 0.5rem;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 a {
-    color: inherit;
+  color: inherit;
 }
 
 a:hover {
-    color: inherit;
-    text-decoration: none;
-    cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.prev {
+  background-color: E3E3E3;
 }
 
 @media screen and (min-width: 768px) {
-    body {
-        height: 100%;
-        width: 100%;
-        padding-top: 2rem;
-    }
+  body {
+    height: 100%;
+    width: 100%;
+    padding-top: 2rem;
+  }
 
-    #headDiv {
-        padding-top: 1rem;
-        margin-left: 0rem;
-        width: 100%;
-    }
+  #headDiv {
+    padding-top: 1rem;
+    margin-left: 0rem;
+    width: 100%;
+  }
 
-    #choiceId {
-        height: auto;
-    }
+  #choiceId {
+    height: auto;
+  }
 
-    #p5, #animations, #figures, #grailed {
-        height: 12rem;
-    }
+  #p5,
+  #animations,
+  #figures,
+  #grailed {
+    height: 12rem;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-    #choiceId {
-        height: auto;
-    }
+  #choiceId {
+    height: auto;
+  }
 
-    #p5, #animations, #figures, #grailed {
-        height: 13rem;
-    }
+  #p5,
+  #animations,
+  #figures,
+  #grailed {
+    height: 13rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    #choiceId {
-        height: auto;
-        padding-bottom: 10%;
-    }
+  #choiceId {
+    height: auto;
+    padding-bottom: 10%;
+  }
 
-    #p5, #animations, #figures, #grailed {
-        height: 10rem;
-    }
+  #p5,
+  #animations,
+  #figures,
+  #grailed {
+    height: 10rem;
+  }
 }
 
 #headDiv {
-    padding-top: 1rem;
-    padding-bottom: 1.75rem;
-    margin-left: 0rem;
+  padding-top: 1rem;
+  padding-bottom: 1.75rem;
+  margin-left: 0rem;
 }
 
 #p5 {
-    background-color: grey;
-    background-position: center bottom;
-    background-image: url("/p5Stuff-Resources/blueWaveGIF.gif");
-    background-size: 100%;
-    cursor: pointer;
-    opacity: 100%;
-    margin: 3% 3% 3% 3%;
-    transition: opacity 100ms;
-    transition: background-size 100ms;
+  background-color: grey;
+  background-position: center bottom;
+  background-image: url("/p5Stuff-Resources/blueWaveGIF.gif");
+  background-size: 100%;
+  cursor: pointer;
+  opacity: 100%;
+  margin: 3% 3% 3% 3%;
+  transition: opacity 100ms;
+  transition: background-size 100ms;
 }
 
 #grailed {
-    background-color: grey;
-    background-position: center bottom;
-    background-image: url("/Animation-Gifs/grailedScroll.gif");
-    background-size: 100%;
-    cursor: pointer;
-    opacity: 100%;
-    margin: 3% 3% 3% 3%;
-    transition: opacity 100ms;
-    transition: background-size 100ms;
+  background-color: grey;
+  background-position: center bottom;
+  background-image: url("/Animation-Gifs/grailedScroll.gif");
+  background-size: 100%;
+  cursor: pointer;
+  opacity: 100%;
+  margin: 3% 3% 3% 3%;
+  transition: opacity 100ms;
+  transition: background-size 100ms;
 }
 
 #grailed:hover {
-    opacity: 80%;
-    background-size: 80%;
+  opacity: 80%;
+  background-size: 80%;
 }
 
 #p5:hover {
-    opacity: 80%;
-    background-size: 80%;
+  opacity: 80%;
+  background-size: 80%;
 }
 
 #animations:hover {
-    opacity: 80%;
-    background-size: 80%;
+  opacity: 80%;
+  background-size: 80%;
 }
 
 #figures:hover {
-    opacity: 80%;
-    background-size: 80%;
+  opacity: 80%;
+  background-size: 80%;
 }
 
 #projects {
-    background-color: grey;
+  background-color: grey;
 }
 
 #animations {
-    background-color: white;
-    background-image: url("tallComp.gif");
-    background-position: center center;
-    background-size: 100%;
-    cursor: pointer;
-    margin: 3% 3% 3% 3%;
-    opacity: 100%;
-    transition: opacity 100ms;
-    transition: background-size 100ms;
+  background-color: white;
+  background-image: url("tallComp.gif");
+  background-position: center center;
+  background-size: 100%;
+  cursor: pointer;
+  margin: 3% 3% 3% 3%;
+  opacity: 100%;
+  transition: opacity 100ms;
+  transition: background-size 100ms;
 }
 
 #figures {
-    background-color: white;
-    background-image: url("/figure-Resources/profile3Small.jpg");
-    background-position: center top;
-    background-size: 100%;
-    cursor: pointer;
-    margin: 3% 3% 3% 3%;
-    opacity: 100%;
-    transition: opacity 100ms;
-    transition: background-size 100ms;
+  background-color: white;
+  background-image: url("/figure-Resources/profile3Small.jpg");
+  background-position: center top;
+  background-size: 100%;
+  cursor: pointer;
+  margin: 3% 3% 3% 3%;
+  opacity: 100%;
+  transition: opacity 100ms;
+  transition: background-size 100ms;
 }
 
 .titleText {
-    color: black;
-    font-family: "Noto Serif", serif;
-    font-size: 3.5vh;
+  color: black;
+  font-family: "Noto Serif", serif;
+  font-size: 3.5vh;
 }
 
 #footer {
-    background-color: white;
-    border-top: 1px dashed black;
-    font-size: 0.9rem;
+  background-color: white;
+  border-top: 1px dashed black;
+  font-size: 0.9rem;
 }
 
 #animText {
-    color: white;
+  color: white;
 }
 
 .container {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 #svgSvg {
-    width: 4rem;
+  width: 4rem;
 }
 
 #svgSvg:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
