--- a/grailedCss.css
+++ b/grailedCss.css
@@ -13,37 +13,37 @@ body {
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 #codesnip {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .subhead {
-    color: "grey";
+  color: "grey";
 }
 
 .underline {
-    text-decoration: underline;
-    color: black;
+  text-decoration: underline;
+  color: black;
 }
 
 @media screen and (min-width: 768px) {
-
   #closetVideo {
-      max-width: 56%;
+    max-width: 56%;
   }
 
   #vidDiv {
-      padding-top: 3%;
-      text-align: center;
+    padding-top: 3%;
+    text-align: center;
+    background-color: E3E3E3;
   }
 
   .imgDescrp {
-      font-size: 0.9rem;
-      color: #414141;
-      text-align: center;
+    font-size: 0.9rem;
+    color: #414141;
+    text-align: center;
   }
 
   body {
@@ -76,15 +76,16 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-.imgDescrp {
-      font-size: 0.9rem;
-      color: #414141;
-      text-align: center;
+  .imgDescrp {
+    font-size: 0.9rem;
+    color: #414141;
+    text-align: center;
   }
 
   #vidDiv {
     padding-top: 3%;
     text-align: center;
+    background-color: E3E3E3;
   }
 
   #closetVideo {
