minor updates to line chart

--- a/crossword/style.css
+++ b/crossword/style.css
@@ -1,24 +1,24 @@
   #header {
-      padding-top: 2%;
-      padding-left: 10%;
-      width: 100%;
-      text-align: left;
-      font-family: "Cambria",Helvetica,Arial,sans-serif;
-      font-size: 35pt;
-      font-weight: bold;
+    padding-top: 2%;
+    padding-left: 10%;
+    width: 100%;
+    text-align: left;
+    font-family: "Cambria",Helvetica,Arial,sans-serif;
+    font-size: 35pt;
+    font-weight: bold;
   }
   .axisLabel {
-      font-family: "Cambria",Helvetica,Arial,sans-serif;
-      font-size: 35pt;
-      font-weight: bold;
+    font-family: "Cambria",Helvetica,Arial,sans-serif;
+    font-size: 35pt;
+    font-weight: bold;
   }
   .axis {
-      font-size: 12pt;
-      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12pt;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   }
   .name {
-      font-size: 12pt;
-      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12pt;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   }
 
   body {
@@ -27,17 +27,13 @@
   }
 
   #week {
-   /* padding-left: 90%;*/
-   text-align: right;
-   /*padding-top: 100px;*/
-   /*margin-top: 30px;*/
-   /*padding-right: 10%;*/
+    text-align: right;
   }
 
   #selectSpan {
     float: right;
     width: 31%;
-    margin-bottom: 0
+    margin-bottom: 0;
   }
 
   #graph {
