formatting typep5 page

--- a/p5typeCss.css
+++ b/p5typeCss.css
@@ -12,6 +12,10 @@ body {
   font-family: "Noto Serif", serif;
 }
 
+#kaneQuote {
+  font-style: italic;
+}
+
 img {
     width: 100%;
     object-fit: contain;
