--- a/style/meStyle.css
+++ b/style/meStyle.css
@@ -1,178 +1,179 @@
 html {
-	font-size: 16px;
-	height: 100%;
-    width: 100%;
+  font-size: 16px;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    height: 100%;
-	width: 100%;
-	padding-top: .5rem;
+  height: 100%;
+  width: 100%;
+  padding-top: 0.5rem;
 }
 
 .hidden {
-	display: none;
+  display: none;
 }
 
 a {
-	color: inherit;
+  color: inherit;
 }
 
 a:hover {
-	color: inherit;
-	text-decoration: none;
-	cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #sideBar {
-	height: auto;
-	margin: 0 auto;
-	width: 100%;
-	padding-top: 2rem;
-	text-align: center;
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  padding-top: 2rem;
+  text-align: center;
 }
 
 #nameIndex {
-    font-family: 'Noto Serif', serif;	
-    color: black;
-    font-size: 1.6rem;
-    margin-bottom: 1.5%;
+  font-family: 'Noto Serif', serif;
+  color: black;
+  font-size: 1.6rem;
+  margin-bottom: 1.5%;
 }
 
-.subHead, p {
-	vertical-align: center;
-	font-family: 'Cormorant Garamond', serif;
-	transition: opacity 300ms;
-	font-size: 1.2rem;
-	color: black;
+.subHead,
+p {
+  vertical-align: center;
+  font-family: 'Cormorant Garamond', serif;
+  transition: opacity 300ms;
+  font-size: 1.2rem;
+  color: black;
 }
 
 .subHead {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 #sepYikai {
-    width: 50%;
-    margin: auto;
-    border-bottom: 3px dashed black;
+  width: 50%;
+  margin: auto;
+  border-bottom: 3px dashed black;
 }
 
 div.subHead {
-	border-left: 0px dashed black;
-	background-color: white;
-	transition: opacity 300ms;
-	transition: border-left 300ms;
-	text-align: center;
-	opacity: .8;
-	/*outline: 2px solid black; */
+  border-left: 0px dashed black;
+  background-color: white;
+  transition: opacity 300ms;
+  transition: border-left 300ms;
+  text-align: center;
+  opacity: 0.8;
+  /*outline: 2px solid black; */
 }
 
 @media screen and (min-width: 768px) {
-	body {
-    	height: 100%;
-		width: 100%;
-		padding-top: 2rem;
-	}
+  body {
+    height: 100%;
+    width: 100%;
+    padding-top: 2rem;
+  }
 
-    div.subHead div {
-		background-color: white;
-		transition: opacity 300ms;
-		border-left: 0px dashed black;
-		transition: border-left 300ms;
-		opacity: .8;
-		text-align: left;
-	}
+  div.subHead div {
+    background-color: white;
+    transition: opacity 300ms;
+    border-left: 0px dashed black;
+    transition: border-left 300ms;
+    opacity: 0.8;
+    text-align: left;
+  }
 
-	#sideBar {
-		text-align: left;
-		padding-top: 1.5rem; 
-		margin-right: 0rem;
-		padding-right: 0rem;
-	}
+  #sideBar {
+    text-align: left;
+    padding-top: 1.5rem;
+    margin-right: 0rem;
+    padding-right: 0rem;
+  }
 
-	#typeDiv {
-		width: 100%;
-		margin-left: 0rem;
-		margin-top: 0;
-		padding-right: 4rem;
-		padding: 0 auto;
-		text-align: left;
-	}
+  #typeDiv {
+    width: 100%;
+    margin-left: 0rem;
+    margin-top: 0;
+    padding-right: 4rem;
+    padding: 0 auto;
+    text-align: left;
+  }
 
-	#headDiv {
-		padding-top: 1rem;
-		margin-left: 0;
-	}
+  #headDiv {
+    padding-top: 1rem;
+    margin-left: 0;
+  }
 
-	#sepYikai {
+  #sepYikai {
     width: 100%;
     margin: auto;
     border-bottom: 3px dashed black;
-	}
+  }
 
-	#aboutMe {
-		margin-top: .5rem;
-	}
-	
+  #aboutMe {
+    margin-top: 0.5rem;
+  }
 }
 
 #headDiv {
-    padding-top: 1rem;
-    padding-bottom: 1.5rem;
-    margin-left: 0rem;
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
+  margin-left: 0rem;
 }
 
 #svgSvg {
-	width: 4rem;
+  width: 4rem;
 }
 
 #typeDiv {
-	width: 90%;
-	margin: 0 auto;
-	padding: 0 auto;
-	padding-bottom: 2rem;
-
+  width: 90%;
+  margin: 0 auto;
+  padding: 0 auto;
+  padding-bottom: 2rem;
 }
 
 #nameRow {
-	width: auto;
-	margin: 0 auto;
+  width: auto;
+  margin: 0 auto;
 }
 
 div.subHead div:hover {
-	opacity: 1;
-	border-left: .1rem dashed black;
+  opacity: 1;
+  border-left: 0.1rem dashed black;
 }
-
 
 #svgSvg:hover {
-	opacity: 0.5;
-}
-
-#resume {
-	position: relative;
-	z-index: 3;
+  opacity: 0.5;
 }
 
 #portfolio {
-	position: relative;
-	margin-top: 0;
-	z-index: 2;
-	padding-top: 0;
+  position: relative;
+  margin-top: 0;
+  z-index: 2;
+  padding-top: 0;
+}
+
+#mood {
+  position: relative;
+  margin-top: 0;
+  z-index: 2;
+  padding-top: 0;
+  transform: translate(0%, 120%) rotate(25deg);
 }
 
 #contentWrapper {
-	width: 100%;
-	margin: 0 auto;
-	padding-top: 0rem;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 0rem;
 }
 
 #footer {
-	background-color: rgb(255,255,255);
-	font-size: .9rem;
+  background-color: rgb(255, 255, 255);
+  font-size: 0.9rem;
 }
 
 .container {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
