--- a/style/aboutMeCss.css
+++ b/style/aboutMeCss.css
@@ -2,6 +2,7 @@ html {
   font-size: 16px;
   height: 100%;
   width: 100%;
+  
 }
 body {
   height: 100%;
@@ -83,9 +84,14 @@ p {
   width: 100%;
 }
 
-#sep {
+#sepRed {
   width: 80%;
   border-bottom: 3px dashed red;
+}
+
+#sepBlue {
+  width: 80%;
+  border-bottom: 3px dashed powderblue;
 }
 
 #info {
